modified view resume button

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                 </div>
                 <div id="resumeButtons">
                      <div>
-                        <button id="resume-button-2" type="button"><span></span>View Resume</button>
+                        <!-- <button id="resume-button-2" type="button"><span></span>View Resume</button> -->
+                        <a href="./Sowjanya-Senapathi-Resume .pdf"><button id="resume-button-2" type="button"><span></span>View Resume</button></a>
                         <!-- <button type="button"><span></span>Subscribe</button> -->
                     </div>
                     <div>
